--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     </head>
     <link rel="stylesheet" href="C:\Users\User\Documents\projekt\.vscode\CSS\style.css">
     <body>
+        <style>
+            table, th, td {
+    border:1px solid black;
+  }
+
+  img{
+    border-color: black;
+    border: solid;
+  }
+
+  body{
+    background-color: rgb(203, 224, 247);
+  }
+        </style>
         <p>Aktiviteti fizik permireson qarkullimin e pergjithshem te gjakut, rrit rrjedhen e gjakut ne tru dhe nivelet e noradrenalines dhe endorfines, te cilat mund te zvogelojne stresin, te permiresojne disponimin, te nxisin nje efekt qetesues pas ushtrimit dhe si rezultat te permiresojne arritjet.Po ashtu, perftime shendetesore jane edhe ndertimi i kockave te forta, nyjave te shendetshme, zemres se forte, shendetit te mire mendor dhe parandalon shqetesimin kryesor – obezitetin. Aktiviteti fizik ndikon edhe ne fiziologjine e trurit duke rritur: kapilaret e gjakut, qarkullimin e gjakut, oksigjenimin e trurit, rritjen e qelizave nervore ne hipokampus (qendra e te mesuarit dhe kujteses). Keto ndryshime fiziologjike lidhen me permiresimin e vemendjes, permiresimin e procesimit te informates, ruajtjen dhe rikthimin dhe rritjen e perqendrimit.</p>
             
             <h2>Fakte per aktivitetin fizik</h2>
